--- a/02-软件设计/软件设计/PTOCR/PTOCR/PTOCR.vcxproj.filters
+++ b/02-软件设计/软件设计/PTOCR/PTOCR/PTOCR.vcxproj.filters
@@ -65,6 +65,21 @@
     <ClCompile Include="ProcessImage.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="readXML.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="tinystr.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="tinyxml.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="tinyxmlerror.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="tinyxmlparser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="PTOCR.rc">
